@@ -1,3 +1,7 @@
+2010-04-01 MA Yue <velly.empire@gmail.com>
+
+    *Improve the 'start here' icon setting 
+    *Improve the login icon setting
 2010-03-31 MA Yue <velly.empire@gmail.com>
 
     * Add icons for application menu shortcuts.
